# escribe-chanchi

./: .gitignore  CMakeLists.txt  IMPLEMENTACION_PRIORITARIA.md  Makefile  README.md  compilar.sh  ejecutar.sh  ejemplo.json  ejemplo.m3u  ejemplo.py  main.cpp  mainwindow.cpp  mainwindow.h  markdow_editor.cpp  markdow_editor.h  markdown_editor.pro  markdown_editor_windows.pro  markdown_formatter.cpp  markdown_formatter.h  resources.qrc  simple_markdown_windows.h  template_manager.cpp  template_manager.h
templates/: articulo_blog.md  documento_tecnico.md  readme_proyecto.md
